Fixing x-overflow and updating events

--- a/themes/konigi-2021/assets/sass/konigi/_home.scss
+++ b/themes/konigi-2021/assets/sass/konigi/_home.scss
@@ -6,6 +6,7 @@
     background-repeat: no-repeat;
     background-size: cover;    
     min-height: 649px;
+    min-height: 87vh;
     color: $white;
 	@include breakpoint(sm) {	
 		min-height:auto;
