--- a/themes/konigi-2021/assets/sass/konigi/_layout.scss
+++ b/themes/konigi-2021/assets/sass/konigi/_layout.scss
@@ -1,3 +1,8 @@
+// RESET X OVERFLOW
+html, body {
+  overflow-x: hidden;
+}
+
 // GNAV
 #header {
   background: url("/img/bg-nav.jpg");
